--- a/_posts/2017-10-5-利用github搭建博客.md
+++ b/_posts/2017-10-5-利用github搭建博客.md
@@ -2,15 +2,15 @@
 layout:     post                    # 使用的布局（不需要改）
 title:      My First Post               # 标题 
 subtitle:   Hello World, Hello Blog #副标题
-date:       2017-02-06              # 时间
-author:     BY                      # 作者
-header-img: img/post-bg-2015.jpg    #这篇文章标题背景图片
+date:       2017-10-5              # 时间
+author:     qioqio                     # 作者
+header-img: img/5.jpg    #这篇文章标题背景图片
 catalog: true                       # 是否归档
 tags:                               #标签
-    - 生活
+    - 技术
+    - 学习
 ---
 
-## Hey
->这是我的第一篇博客。
+# Hey
+这是我的第一篇博客。
 
-进入你的博客主页，新的文章将会出现在你的主页上.
