--- a/_posts/2017-10-5-利用github搭建博客.md
+++ b/_posts/2017-10-5-利用github搭建博客.md
@@ -7,8 +7,7 @@ author:     qioqio                     # 作者
 header-img: img/5.jpg    #这篇文章标题背景图片
 catalog: true                       # 是否归档
 tags:                               #标签
-    - 技术
-    - 学习
+    - test
 ---
 
 # Hey
