--- a/_posts/2017-10-6-搭建博客的经验.md
+++ b/_posts/2017-10-6-搭建博客的经验.md
@@ -22,7 +22,9 @@ tags:
 
 -**添加disqus评论系统没有讲清楚**:博主并没有讲清楚应该怎样才能真正的将评论系统添加到这个博客上,最初我并不知道是什么原因导致评论系统没有添加上,我在这个地方卡了很长时间,最后找到了原因就是我们的网站并没有添加到disqus账号的后台上,具体如何操作,参考这个[博客](http://pizn.github.io/2011/11/15/use-disqus-for-your-post.html)
 
-这次搭建自己的博客自己还是很开心的,以后养成写博客的习惯.
+这次搭建自己的博客自己还是很开心的,以后养成写博客的习惯
+
+
 
 
 
