--- a/_posts/2017-11-9-OS线程笔记.md
+++ b/_posts/2017-11-9-OS线程笔记.md
@@ -4,7 +4,7 @@ title: OS线程笔记
 subtitle:  
 date: 2017-11-9
 author: qioqio
-header-img: img/Pingguo37.jpg
+header-img: img/Mountain_lion20.jpg
 catalog: true
 tags:                             
 - 线程
@@ -46,19 +46,19 @@ win linux 既有进程也有线程的概念
 ![](https://raw.githubusercontent.com/qioqio/photo/master/xianchengb.PNG)
 ![](https://raw.githubusercontent.com/qioqio/photo/master/xianchengc.PNG)
 
-	管理是由线程库在用户空间进行的，内核并无感知
-	任何时刻只有一个线程能访问内核（如果需要的话）
-	同一进程的线程不能运行在不同的CPU上
-	**若一个线程执行了阻塞系统调用，则整个进程会被阻塞**
-	线程间占用CPU等协调工作由用户程序自行解决
+管理是由线程库在用户空间进行的，内核并无感知
+任何时刻只有一个线程能访问内核（如果需要的话）
+同一进程的线程不能运行在不同的CPU上
+**若一个线程执行了阻塞系统调用，则整个进程会被阻塞**
+线程间占用CPU等协调工作由用户程序自行解决
 
 #### 一对一模型(内核级线程模型)
 ![](https://raw.githubusercontent.com/qioqio/photo/master/xianchengd.PNG)
 ![](https://raw.githubusercontent.com/qioqio/photo/master/xianchenge.PNG)
-	用户创建的就是内核级线程!（通过系统调用）
-	一个线程执行阻塞系统调用时，允许CPU切换给其他线程，因此具有更好的并发能力
-	一个进程的不同线程可运行在不同的CPU上，实现多CPU的并行处理
-	但创建内核线程的数量会影响系统性能，OS会限制线程总量
+用户创建的就是内核级线程!（通过系统调用）
+一个线程执行阻塞系统调用时，允许CPU切换给其他线程，因此具有更好的并发能力
+一个进程的不同线程可运行在不同的CPU上，实现多CPU的并行处理
+但创建内核线程的数量会影响系统性能，OS会限制线程总量
 	
 #### 多对多模型(混合线程模型)
 ![](https://raw.githubusercontent.com/qioqio/photo/master/xianchengf.PNG)
@@ -73,14 +73,14 @@ win linux 既有进程也有线程的概念
 	
 有两种方法实现线程库
 ##### 用户线程库：
-	在用户空间中提供一个没有内核支持的线程库，其所有代码和数据结构都存在于用户空间中
-	调用库中的一个函数只是导致了用户空间中的一个本地函数调用，而不是系统调用
-	编程语言提供的库函数
+在用户空间中提供一个没有内核支持的线程库，其所有代码和数据结构都存在于用户空间中
+调用库中的一个函数只是导致了用户空间中的一个本地函数调用，而不是系统调用
+编程语言提供的库函数
 	
 ##### 内核线程库：
-	由操作系统直接提供的线程库。其所有代码和数据结构存在于内核空间中
-	调用库中的一个API函数通常会导致对内核的系统调用
-	操作系统提供的API
+由操作系统直接提供的线程库。其所有代码和数据结构存在于内核空间中
+调用库中的一个API函数通常会导致对内核的系统调用
+操作系统提供的API
 	
 目前使用的线程库主要有3类
 ###### POSIX Pthread线程库
