--- a/_posts/2017-11-9-OS线程笔记.md
+++ b/_posts/2017-11-9-OS线程笔记.md
@@ -95,7 +95,12 @@ win linux 既有进程也有线程的概念
 	Java线程库跟随JVM运行在宿主OS中
 	Java线程库使用宿主OS支持的线程库实现的
 
-	
+根据进程与线程的设置对os进行划分
+1 单进程,单线程 MS-DOS
+2 多进程,单线程 多数的unix系统
+3 多进程多线程 linux win
+4 单进程多线程 某些嵌入式操作系统,进程之间共享内存
+
 	
 
 
