--- a/_posts/2017-10-12-git命令总结.md
+++ b/_posts/2017-10-12-git命令总结.md
@@ -19,12 +19,12 @@ tags:                               #标签
 	git init
 	git add README.md
 	git commit -m "first commit"
-	git remote add origin git@github.com:qiubaiying/项目名.git
+	git remote add origin git@github.com:qioqio/项目名.git
 	git push -u origin master
 
 若仓库存在直接push
 
-	git remote add origin git@github.com:qiubaiying/test.git
+	git remote add origin git@github.com:qioqio/test.git
 	git push -u origin master
 
 
