--- a/_posts/2017-11-25-软件工程结课.md
+++ b/_posts/2017-11-25-软件工程结课.md
@@ -16,7 +16,7 @@ tags:
 
 我们老师第一次课就说我们要有自己的博客,然后写博客,但是我还是给理解错需求了,我以为只要是博客就行,结果我写了很多不相关的事情到自己的博客系统上,相反由于我们的软件工程每一次实验都要写出冗长的报告,我的所有感悟也都在报告里面说的七七八八了,所以我就没怎么写关于与软件工程课程相关的博客,现在为了我课程里面的五分,我还是拼了,写几篇吧.
 
-我首先应该把我七个实验里面的前五个实验的报告给出来,这些报告里面的内容事无巨细,描述的非常详尽,一来方便我的复习,二来方便学弟学妹参考,如果他们能找到我的博客的话.^_^
+我首先应该把我七个实验的实验报告给出来,这些报告里面的内容事无巨细,描述的非常详尽,一来方便我的复习,二来方便学弟学妹参考,如果他们能找到我的博客的话.^_^
 
 
 [实验一](https://1drv.ms/w/s!AnNBkUkEHDfjhnB8lVON6v1jPB8a)
@@ -32,7 +32,7 @@ tags:
 [实验六](https://1drv.ms/w/s!AnNBkUkEHDfjhnbIAR4mxrhjQKa3)
 
 
-
+[实验七](https://1drv.ms/w/s!AnNBkUkEHDfjhwPC57O0FsKkeZS9)
 
 
 
