--- a/_posts/2018-1-1-百元之恋.md
+++ b/_posts/2018-1-1-百元之恋.md
@@ -17,3 +17,16 @@ tags:
 请忘掉这样的我,
 今后的每一天就算不拍成电影
 普普通通地过每一天就好
+好痛好痛好痛好痛好痛好痛好痛
+但是 我想在这里
+正如你所见我好不容易站在这里
+却尽是些不如意的事情
+模糊的视线里依稀看见的是
+那些刻意生硬的终于找到的栖身之所
+完结是因为开始过
+失败是因为战斗过 
+分手是因为相遇过 
+这些道理我都懂
+眼泪只会妨碍我去看清那些重要的东西
+明明不想却还是流出来
+反而让我更悲伤
