--- a/_posts/2018-5-9-linux命令.md
+++ b/_posts/2018-5-9-linux命令.md
@@ -12,13 +12,15 @@ tags:
 
 
 
-ps -aux |  grep zhangning
+^ps -aux |  grep zhangning^
+
 
 查看当前运行状态
 
-nohup python x.py > x.txt&
+^nohup python x.py > x.txt&^
 
 nohup使得我们的程序可以在ssh连接断开之后还能运行
->命令行输出重定向
 
-& 是指后台输出
+^>^命令行输出重定向
+
+^&^是指后台输出
